bk_ida/gccida/c2/reload_as_needed
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4321:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type *v41; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4338:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4339:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v59; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4343:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v63; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4359:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v79; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4502:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v223; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4544:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4550:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v271; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4587:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v308; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4588:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v309; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4589:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v310; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4592:4: error: expected ';' after expression
rtx v313; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4592:5: error: use of undeclared identifier 'v313'
rtx v313; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4596:6: error: use of undeclared identifier 'v317'
rtx *v317; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4597:6: error: use of undeclared identifier 'v318'
rtx *v318; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4603:4: error: expected ';' after expression
rtx v324; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4603:5: error: use of undeclared identifier 'v324'
rtx v324; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4618:4: error: expected ';' after expression
rtx v339; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/reload1.c:4618:5: error: use of undeclared identifier 'v339'
rtx v339; // rbx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_as_needed/src/obj/reload1.o] Error 1
